@@ -75,6 +75,7 @@ admin.caption.usergroup.userfidield=Feltnavn for brugerid
 admin.caption.usergroup.username=Brugerid
 admin.caption.useversioning=Brug versionering
 admin.caption.virtualwiki=Virtuel Wiki
+admin.message.changesnotsaved=Changes HAVE NOT been saved
 admin.message.changessaved=\u00C6ndringer gemt
 admin.message.indexrefreshed=Indeks opdateret
 admin.message.loginrequired=Denne side m\u00E5 kun tilg\u00E5es af administratore.
@@ -147,7 +148,10 @@ edit.warning.oldversion=ADVARSEL\: Versionen der redigeres er en gammel verison.
 edit.warning.preview=Gennemse\: Rettelser er ikke gemt.
 error.caption=En system fejl er opst\u00E5et. Fejl beskeden er\:
 error.databaseconnection=Fobindelse til databasen kunne ikke oprettes; venligst check indstillinger for databasen.
+error.directorydelete=Error while deleting file from {0}: {1}
 error.directoryinvalid={0} er ikke en gyldig folder.
+error.directoryread=Error while reading file from {0}: {1}
+error.directorywrite=Error while writing file to {0}: {1}
 error.heading=En system fejl er opst\u00E5et. Fejl beskeden er\:
 error.login=Brugerid og/eller password er forkert. Pr\u00F8v venligst igen.
 error.loginempty=Login m\u00E5 ikke v\u00E6re tom.
